Fixed responsiveness issues in the rectangle over the Squadron 51 banner when displaying on mobile.

--- a/squadron51-style.css
+++ b/squadron51-style.css
@@ -8,8 +8,6 @@ body {
 }
 .first-strip-text-container {
   padding-bottom: 5rem;
-  padding-right: 5rem;
-  padding-left: 5rem;
   padding-top: 8rem;
   max-width: 1200px;
 }
